--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -58,11 +58,12 @@ $contrib-color-2: lighten($contrib-color, 50%);
 $contrib-color-3: lighten($contrib-color, 30%);
 $contrib-color-4: lighten($contrib-color, 15%);
 $contrib-color-5: $contrib-color;
-/*
+
 // Inverted contribution colors (dark to light)
-$contrib-color-1: darken($contrib-color, 15%);
+$contrib-color: #103605;
+$contrib-color-1: $block-bg;
 $contrib-color-2: $contrib-color;
 $contrib-color-3: lighten($contrib-color, 15%);
 $contrib-color-4: lighten($contrib-color, 30%);
 $contrib-color-5: lighten($contrib-color, 50%);
-*/
+
